--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -10,14 +10,14 @@
     
 <link rel="canonical" href="http://striblab.github.io/startribune_dataviz/20151117-police_deaths/index.html?mental=yes" />
 
-<meta itemprop="name" content="Fatal police encounters" /><!-- g+ -->
+<meta itemprop="name" content="Fatal police encounters in Minnesota" /><!-- g+ -->
 <meta name="description" content="mental health, law enforcemnet, police, death" />
 <meta itemprop="description" content="mental health, law enforcemnet, police, death" /><!-- g+ -->
 <meta itemprop="image" content="http://stmedia.stimg.co/Screen+Shot+2016-06-01+at+7.28.45+AM.png?h=630&amp;w=1200&amp;fit=crop&amp;bg=999&amp;crop=faces"><!-- g+ -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta property="og:site_name" content="Star Tribune" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Fatal police encounters" /><!-- fb, linkedin, pinterest -->
+<meta property="og:title" content="Fatal police encounters in Minnesota" /><!-- fb, linkedin, pinterest -->
 <meta property="og:description" content="Since 2000, about 45 percent of those killed in MN police encounters had mental illnesses or had mental health crises when they died." /><!-- fb, linkedin, pinterest -->
 <meta property="og:url" content="http://www.startribune.com/fatal-police-encounters/380298861/" />
 <meta property="og:image" content="http://stmedia.stimg.co/Screen+Shot+2016-06-01+at+7.28.45+AM.png?h=630&amp;w=1200&amp;fit=crop&amp;bg=999&amp;crop=faces" /><!-- fb, linkedin, pinterest -->
@@ -28,7 +28,7 @@
 <meta name="twitter:site" content="@StarTribune" />
 <meta name="twitter:card" content="summary">
 
-<meta name="twitter:title" content="Fatal police encounters" /><!-- twitter -->
+<meta name="twitter:title" content="Fatal police encounters in Minnesota" /><!-- twitter -->
 <meta name="twitter:description" content="Since 2000, about 45 percent of those killed in MN police encounters had mental illnesses or had mental health crises when they died." /><!-- twitter -->
 <meta name="twitter:url" content="http://striblab.github.io/startribune_dataviz/20151117-police_deaths/index.html?mental=yes" /><!-- twitter -->
 <meta name="twitter:image" content="http://stmedia.stimg.co/Screen+Shot+2016-06-01+at+7.28.45+AM.png?h=560&amp;w=750&amp;fit=crop&amp;bg=999&amp;crop=faces"><!-- twitter -->
