--- a/20150125-outstate/index.html
+++ b/20150125-outstate/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Outstate versus Metro State Aid</title>
-  <meta name="description" content="Oil Train Safety">
-  <meta name="author" content="Jeff Hargarten - StarTribune">
+  <meta name="description" content="Outstate versus Metro State Aid">
+  <meta name="author" content="Frey Hargarten - StarTribune">
 
 <style>
     #wrapper { width:100%; }
