--- a/20160702-usbank_stadium/index.html
+++ b/20160702-usbank_stadium/index.html
@@ -59,6 +59,13 @@
         .legendChart { width:100%; }
         .legendChart div { width:48.2%; display:inline-block; text-align:center; cursor: pointer; color:#000; }
       }
+  
+.chartTitle {
+    font-size: 1em;
+}  
+  
+  
+  
 </style>
 
 <body>
