--- a/20160702-usbank_stadium/index.html
+++ b/20160702-usbank_stadium/index.html
@@ -46,9 +46,9 @@
 
       #totals { font-size:2.75em; color:#333; margin-top:3px; letter-spacing: -.5px;}
 
-      #all { float:left; width:14.5%; height:83px; vertical-align:center; margin-top:3px; padding-top:33px; border-radius:5px; background-color:#ddd; }
+      #all { float:left; width:14.5%; height:83px; font-size:.9em; vertical-align:center; margin-top:3px; padding-top:33px; border-radius:5px; background-color:#ddd; }
       .legendChart { float:right; width:85%; }
-      .legendChart div { width:19%; display:inline-block; text-align:center; cursor: pointer; color:#000; border-radius:5px; margin:3px; padding:10px; }
+      .legendChart div { font-size:.9em; width:19%; display:inline-block; text-align:center; cursor: pointer; color:#000; border-radius:5px; margin:3px; padding:10px; }
       .legendChart div:hover, #all:hover, .selected2 { background-color:#557799 !important; color:#fff !important; cursor:pointer; } 
     
     
