--- a/20160702-usbank_stadium/index.html
+++ b/20160702-usbank_stadium/index.html
@@ -30,6 +30,8 @@
 
       p { font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
       h4 { font-family:"Benton Sans",Helvetica,Arial,sans-serif; text-align:center; padding:10px; }
+  
+  #wrapper {width:100%;}
 
       .wrapper-dropdown-1 { display:inline-block;font-family:"Benton Sans",Helvetica,Arial,sans-serif;z-index:900;background:#ddd;color:#333;cursor:pointer;font-weight:bold;outline:none;padding:8px;position:relative;width:200px;border:1px solid #aaa;box-shadow:0 2px 1px rgba(0, 0, 0, 0.10);font-size:14px; width:250px; }
       .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
@@ -46,7 +48,7 @@
 
       #totals { font-size:2.75em; color:#333; margin-top:3px; letter-spacing: -.5px;}
 
-      #all { float:left; width:14.5%; height:83px; font-size:.9em; vertical-align:center; margin-top:3px; padding-top:33px; border-radius:5px; background-color:#ddd; }
+      #all { float:left; width:14.5%; height:82px; font-size:.9em; vertical-align:center; margin-top:3px; padding-top:33px; border-radius:5px; background-color:#ddd; }
       .legendChart { float:right; width:85%; }
       .legendChart div { font-size:.9em; width:19%; display:inline-block; text-align:center; cursor: pointer; color:#000; border-radius:5px; margin:3px; padding:10px; }
       .legendChart div:hover, #all:hover, .selected2 { background-color:#557799 !important; color:#fff !important; cursor:pointer; } 
