--- a/20160702-usbank_stadium/index.html
+++ b/20160702-usbank_stadium/index.html
@@ -41,6 +41,17 @@
       header[role="banner"] { width:100%;height:40px;z-index:1000;background:#f0f0f0; }
       .c3-tooltip th { background-color:#aaa;font-size:12px;padding:2px 5px;text-align:left;color:#FFF;font-family:"Benton Sans"; }
 
+@media (max-width: 500px)
+.legendChart div {
+    width: 47%;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    color: #000;
+} 
+  
+  
+  
       .byline { text-align:center; margin-right:auto; margin-left:auto; width:100%; }
       .footnote { color:#ccc; font-size:0.7em; }
 
