chart buttons widths

--- a/20160702-usbank_stadium/index.html
+++ b/20160702-usbank_stadium/index.html
@@ -57,7 +57,7 @@
       @media (max-width:500px) {
         #chart { display:none; }
         #chart_m { display:block; }
-        #all { width:100%; margin-right:auto; margin-left:auto; }
+        #all { float:none; width:97%; margin:0 auto 3px auto; }
         .legendChart { width:100%; }
         .legendChart div { width:47%; display:inline-block; text-align:center; cursor: pointer; color:#000; }
       }
