--- a/20160714-castile_timeline/index.html
+++ b/20160714-castile_timeline/index.html
@@ -254,6 +254,16 @@ chart = c3.generate({
                 {value: '05-19-2006', text: '', position: 'start', class: 'reinstate'},
                 {value: '05-09-2007', text: '', position: 'start', class: 'reinstate'},
                 {value: '09-30-2013', text: '', position: 'start', class: 'reinstate'},
+                {value: '01-28-2008', text: '', position: 'start', class: 'reinstate'},
+                {value: '08-26-2008', text: '', position: 'start', class: 'reinstate'},
+                {value: '10-07-2008', text: '', position: 'start', class: 'reinstate'},
+                {value: '11-05-2008', text: '', position: 'start', class: 'reinstate'},
+                {value: '03-20-2009', text: '', position: 'start', class: 'reinstate'},
+                {value: '06-08-2009', text: '', position: 'start', class: 'reinstate'},
+                {value: '11-06-2009', text: '', position: 'start', class: 'reinstate'},
+                {value: '02-11-2010', text: '', position: 'start', class: 'reinstate'},
+                {value: '02-05-2003', text: '', position: 'start', class: 'reinstate'},
+                {value: '02-19-2003', text: '', position: 'start', class: 'reinstate'},
 
                 {value: '12-24-2002', text: '', position: 'start', class: 'suspend'},
                 {value: '01-02-2003', text: '', position: 'start', class: 'suspend'},
@@ -278,7 +288,20 @@ chart = c3.generate({
                 {value: '05-03-2012', text: '', position: 'start', class: 'suspend'},
                 {value: '06-01-2012', text: '', position: 'start', class: 'suspend'},
                 {value: '07-26-2012', text: '', position: 'start', class: 'suspend'},
-                {value: '09-23-2013', text: '', position: 'start', class: 'suspend'}
+                {value: '09-23-2013', text: '', position: 'start', class: 'suspend'},
+                {value: '01-25-2008', text: '', position: 'start', class: 'suspend'},
+                {value: '03-03-2008', text: '', position: 'start', class: 'suspend'},
+                {value: '05-07-2008', text: '', position: 'start', class: 'suspend'},
+                {value: '08-05-2008', text: '', position: 'start', class: 'suspend'},
+                {value: '10-03-2008', text: '', position: 'start', class: 'suspend'},
+                {value: '11-03-2008', text: '', position: 'start', class: 'suspend'},
+                {value: '12-03-2008', text: '', position: 'start', class: 'suspend'},
+                {value: '12-08-2008', text: '', position: 'start', class: 'suspend'},
+                {value: '06-04-2009', text: '', position: 'start', class: 'suspend'},
+                {value: '11-05-2009', text: '', position: 'start', class: 'suspend'},
+                {value: '02-10-2010', text: '', position: 'start', class: 'suspend'},
+                {value: '11-04-2010', text: '', position: 'start', class: 'suspend'},
+                {value: '12-30-2010', text: '', position: 'start', class: 'suspend'}
             ]
         }
     },
