--- a/20160714-castile_timeline/index.html
+++ b/20160714-castile_timeline/index.html
@@ -240,7 +240,7 @@ chart = c3.generate({
         // }
     },
      color:  { 
-          pattern: ['#000', '#ca7a68', '#76909f', '#b1ae68', '#a17a94', '#6f9a7c', '#cf99fa', '#9c8f68']
+          pattern: ['#000', '#ca7a68', '#76909f', '#b1ae68', '#a17a94', '#6f9a7c', '#cf995a', '#9c8f68']
           // pattern: ['#000', '#ffaaaa', '#e69190', '#cd7976', '#b5625e', '#9d4a45', '#84332f', '#6c1c1a']
         },
       legend: {
