pulled back the christmas reds and greens

--- a/20160714-castile_timeline/index.html
+++ b/20160714-castile_timeline/index.html
@@ -51,8 +51,8 @@
 
       #pct { text-align:center;margin-bottom:20px; }
 
-      .c3-xgrid-line.suspend line, .suspend { stroke: red !important; color:red; }
-      .c3-xgrid-line.reinstate line, .reinstate { stroke: green !important; color:green; }
+      .c3-xgrid-line.suspend line, .suspend { stroke: #d30000 !important; color:#d30000; }
+      .c3-xgrid-line.reinstate line, .reinstate { stroke: #009b00 !important; color:#009b00; }
       .label { font-weight:900; }
       #legend { text-align:center; margin-top:-35px;margin-bottom:20px;}
 
