--- a/20160714-castile_timeline/index.html
+++ b/20160714-castile_timeline/index.html
@@ -239,7 +239,7 @@ chart = c3.generate({
         // }
     },
      color:  { 
-          pattern: ['#000', '#bbbbbf', '#a7aaae', '#929a9c', '#7f8a8b', '#6c7a7a', '#5a6a6a', '#475b5a']
+          pattern: ['#000', '#ca7a68', '#76909f', '#b1ae68', '#a17a94', '#6f9a7c', '#cf995a', '#9c8f68']
         },
       legend: {
         show: false
