--- a/20160714-castile_timeline/index.html
+++ b/20160714-castile_timeline/index.html
@@ -389,7 +389,7 @@ chartF = c3.generate({
         type: 'scatter'
     },
      color:  { 
-          pattern: ['#D6A184']
+          pattern: ['#000']
         },
       legend: {
         show: false
