--- a/20160714-castile_timeline/index.html
+++ b/20160714-castile_timeline/index.html
@@ -54,10 +54,12 @@
       .c3-xgrid-line.suspend line, .suspend { stroke: #d30000 !important; color:#d30000; }
       .c3-xgrid-line.reinstate line, .reinstate { stroke: #009b00 !important; color:#009b00; }
       .label { font-weight:900; }
-      #legend { text-align:center; margin-top:-35px;margin-bottom:20px;}
+      #legend { padding:15px; text-align:center; margin-top:-35px;margin-bottom:20px;}
 
       #filter input { border-radius:0 !important; width:100% !important; }
       #filter { padding:0px !important; }
+
+      .bigNum { font-size:2.5em !important; }
 
       p { text-align:center; margin-right:auto; margin-left:auto; padding:15px; }
 
@@ -77,11 +79,11 @@
 
 <!-- <div class="chartTitle">Castile traffic stops over time by charge and disposition</div>
 <div class="chatter">Philando Castile was pulled over 52 times since 2002 and charged 88 times with various vehicle and traffic violations and fined for more than $7,000.</div> -->
-<div class="chartTitle">Breakdown of citations</div>
+<div class="label">Breakdown of citations</div>
     <div id="pct"></div>
     <div class='label'>Citations</div>
     <div id="chart"></div>
-    <div id="legend"><span class='suspend'>&mdash;</span> License Suspended  <span class='reinstate'>&mdash;</span> License Reinstated</div>
+    <div id="legend"><span class='suspend'>&mdash;</span> License Suspended/Revoked  <span class='reinstate'>&mdash;</span> License Reinstated/Returned</div>
 <div class='label'>Fines</div>
     <div id="chartF"></div>
   
@@ -254,16 +256,6 @@ chart = c3.generate({
                 {value: '05-19-2006', text: '', position: 'start', class: 'reinstate'},
                 {value: '05-09-2007', text: '', position: 'start', class: 'reinstate'},
                 {value: '09-30-2013', text: '', position: 'start', class: 'reinstate'},
-                {value: '01-28-2008', text: '', position: 'start', class: 'reinstate'},
-                {value: '08-26-2008', text: '', position: 'start', class: 'reinstate'},
-                {value: '10-07-2008', text: '', position: 'start', class: 'reinstate'},
-                {value: '11-05-2008', text: '', position: 'start', class: 'reinstate'},
-                {value: '03-20-2009', text: '', position: 'start', class: 'reinstate'},
-                {value: '06-08-2009', text: '', position: 'start', class: 'reinstate'},
-                {value: '11-06-2009', text: '', position: 'start', class: 'reinstate'},
-                {value: '02-11-2010', text: '', position: 'start', class: 'reinstate'},
-                {value: '02-05-2003', text: '', position: 'start', class: 'reinstate'},
-                {value: '02-19-2003', text: '', position: 'start', class: 'reinstate'},
 
                 {value: '12-24-2002', text: '', position: 'start', class: 'suspend'},
                 {value: '01-02-2003', text: '', position: 'start', class: 'suspend'},
