adjusted spacing of legend

--- a/20160714-castile_timeline/index.html
+++ b/20160714-castile_timeline/index.html
@@ -62,7 +62,7 @@
       .c3-xgrid-line.reinstate line, .reinstate { stroke: #009b00 !important; color:#009b00; }
       .label { font-weight:900; }
       .label.hed {/*margin-left:30px;*/}
-      #legend { text-align:center; margin-top:-25px;margin-bottom:20px;}
+      #legend { text-align:center; margin-top:-25px;margin-bottom:20px;font-size:.9em;}
 
       #filter input { border-radius:0 !important; width:100% !important; }
       #filter { padding:0px !important; }
